@@ -10,16 +10,13 @@ import com.ecommerceAPI.service.category.CategoryService;
 import com.ecommerceAPI.service.modelMapper.ModelMapperService;
 import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/category")
 public class CategoryController {
-
     private final CategoryService categoryService;
     private final ModelMapperService modelMapper;
 
@@ -38,22 +35,16 @@ public class CategoryController {
 
     @GetMapping("/{id}")
     @ResponseStatus(HttpStatus.OK)
-    @Transactional
     public ResultData<CategoryResponse> get(@PathVariable("id") int id) {
         Category category = this.categoryService.getById(id);
-        CategoryResponse categoryResponse = modelMapper.mapCategoryWithProducts(category);
-        return ResultHelper.success(categoryResponse);
+        return ResultHelper.success(modelMapper.forResponse().map(category, CategoryResponse.class));
     }
 
     @GetMapping
     @ResponseStatus(HttpStatus.OK)
     public ResultData<List<CategoryResponse>> getAll() {
         List<Category> categoryList = this.categoryService.getCategoryList();
-
-        List<CategoryResponse> categoryResponseList = categoryList.stream()
-                .map(modelMapper::mapCategoryWithProducts)
-                .collect(Collectors.toList());
-
+        List<CategoryResponse> categoryResponseList = categoryList.stream().map(category -> this.modelMapper.forResponse().map(category, CategoryResponse.class)).toList();
         return ResultHelper.success(categoryResponseList);
     }
 
